# mcp-auth-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/design/: 001-auth-middleware.md
src/mcp_auth_kit/: __init__.py  cli.py  oauth.py  tokens.py  verifier.py
tests/: conftest.py  test_fixture_server.py  test_oauth.py  test_token_store.py  test_verifier.py
