[project]
name = "mcp-auth-kit"
version = "0.1.0"
description = "Production-grade OAuth 2.1 auth for MCP servers — done right, in minutes."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Stas Bazylevych" }]
keywords = ["mcp", "oauth", "oauth2", "fastmcp", "auth", "security", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0",
]

[project.scripts]
mcp-auth-kit = "mcp_auth_kit.cli:main"

[project.urls]
Homepage = "https://github.com/stanislavn73/mcp-auth-kit"
Repository = "https://github.com/stanislavn73/mcp-auth-kit"
Issues = "https://github.com/stanislavn73/mcp-auth-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auth_kit"]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
